--- a/templates/index.html
+++ b/templates/index.html
@@ -271,7 +271,7 @@
       </div>
 
       <div class="col-md-9 scrollable" id="main-content-test">
-        <h1 class="mt-3 px-2">Test Output</h1>
+        <h1 class="mt-3 px-2">Test Cases</h1>
       </div>
 
     </div>
