--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,9 @@
   <title>Imposter Service UI</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="{{ url_for('static', filename='imposter.css') }}" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicon/apple-touch-icon.png') }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon/favicon-16x16.png') }}">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -64,7 +67,7 @@
       <!-- Main Content -->
       <div class="col-md-9 scrollable" id="main-content">
         <div id="welcome-section" class="welcome-container">
-          <h1 class="display-4 mb-4 fw-normal">Welcome to MockPlant</h1>
+          <img src="{{ url_for('static', filename='images/logo.png') }}">
           <p class="lead text-center fw-normal">Please create a imposter or select an existing imposter to proceed</p>
         </div>
 
